# chuk-experiments-server

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: backup.yml  ci.yml
migrations/: 001_init.sql  002_string_ids.sql  003_users_and_keys.sql  004_artifact_lineage.sql  005_artifact_produced_unique.sql  006_artifact_verify.sql  007_user_tokens.sql  008_artifact_uri_dedup.sql  009_experiment_conclusion_next_action.sql  010_result_superseded.sql  011_experiment_artifacts.sql
scripts/: _drive_common.py  _migrate_common.py  archive_chris_experiments_to_drive.py  archive_chuk_mlx_to_drive.py  audit_artifacts_for_git_refs.py  migrate_chris_experiments.py  migrate_chuk_mcp_lazarus.py  migrate_chuk_mlx.py  migrate_larql_aim_validation.py  smoke_test.py  verify_harness_contract.py
src/chuk_experiments_server/: auth.py  cli.py  config.py  constants.py  db.py  drive_storage.py  errors.py  external_refs.py  internal_client.py  markdown_render.py  models.py  rest.py  serialization.py  server.py  service.py  storage.py  token_crypto.py  tools.py  web.py  webauth.py
src/chuk_experiments_server/rest/: __init__.py  _shared.py  artifacts.py  experiments.py  pins.py  programmes.py  queue.py  runs.py  search.py  users.py
src/chuk_experiments_server/service/: __init__.py  (+7 more)
tests/: conftest.py  test_auth.py  test_cli.py  test_config.py  test_drive_storage.py  test_errors.py  test_external_refs.py  test_internal_client.py  test_migration_helpers.py  test_rest.py  test_service_experiments.py  test_service_queue.py  test_service_runs.py  test_service_users.py  test_storage.py  test_token_crypto.py  test_tools.py  test_web.py  test_webauth.py
(+26 files in other folders)
